--- a/1) Your First Triangle/Tutorial1.vcxproj
+++ b/1) Your First Triangle/Tutorial1.vcxproj
@@ -136,6 +136,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="renderer.cpp" />
     <ClCompile Include="tutorial1.cpp" />
   </ItemGroup>
   <ItemGroup>
