--- a/1) Your First Triangle/Tutorial1.vcxproj.filters
+++ b/1) Your First Triangle/Tutorial1.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClCompile Include="tutorial1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="renderer.h">
