Mad amount of changed for Tutorial 3

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,13 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+Third Party/SOIL/Simple OpenGL Image Library/projects/codeblocks/SOIL.cbp
+Third Party/SOIL/Simple OpenGL Image Library/projects/makefile/alternate Makefile.txt
+Third Party/SOIL/Simple OpenGL Image Library/projects/makefile/makefile
+Third Party/SOIL/Simple OpenGL Image Library/src/include/SOIL/stbi_dds_aug.h
+Third Party/SOIL/Simple OpenGL Image Library/src/stbi_DDS_aug.h
+Third Party/SOIL/Simple OpenGL Image Library/projects/codeblocks/SOIL.cbp
+Third Party/SOIL/Simple OpenGL Image Library/projects/makefile/alternate Makefile.txt
+Third Party/SOIL/Simple OpenGL Image Library/projects/makefile/makefile
+Third Party/SOIL/Simple OpenGL Image Library/src/include/SOIL/stbi_dds_aug.h
+Third Party/SOIL/Simple OpenGL Image Library/src/stbi_DDS_aug.h
