--- a/6) Scene Graph/Tutorial6.vcxproj.filters
+++ b/6) Scene Graph/Tutorial6.vcxproj.filters
@@ -2,5 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <ClCompile Include="Tutorial6.cpp" />
+    <ClCompile Include="renderer.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="renderer.h" />
   </ItemGroup>
 </Project>
