--- a/nclgl/nclgl.vcxproj.filters
+++ b/nclgl/nclgl.vcxproj.filters
@@ -35,6 +35,8 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="SceneNode.cpp" />
     <ClCompile Include="CubeRobot.cpp" />
+    <ClCompile Include="Plane.cpp" />
+    <ClCompile Include="Frustum.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h" />
@@ -80,6 +82,8 @@
     </ClInclude>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CubeRobot.h" />
+    <ClInclude Include="Plane.h" />
+    <ClInclude Include="Frustum.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="GLAD">
