--- a/12) Per Fragment Lighting B/Tutorial12.vcxproj
+++ b/12) Per Fragment Lighting B/Tutorial12.vcxproj
@@ -130,7 +130,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\11) Per Fragment Lighting A\renderer.cpp" />
     <ClCompile Include="Tutorial12.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\11) Per Fragment Lighting A\renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
