Final Submission UGH

--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,5 @@ Third Party/SOIL/Simple OpenGL Image Library/projects/makefile/alternate Makefil
 Third Party/SOIL/Simple OpenGL Image Library/projects/makefile/makefile
 Third Party/SOIL/Simple OpenGL Image Library/src/include/SOIL/stbi_dds_aug.h
 Third Party/SOIL/Simple OpenGL Image Library/src/stbi_DDS_aug.h
+Textures/Coursework/LavaBase.png
+Textures/Coursework/LavaNormal.png
